# nu_plugin_len

./: Cargo.toml  README.md  toolkit.nu
docs/: README.md
scripts/: add-deps.nu  doc.nu
src/: main.rs
